--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Qaider Mood to Verse</title>
+  <title>Guider Mood to Verse</title>
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Amiri&family=Jomhuria&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <!-- Animate.css -->
@@ -78,7 +78,7 @@
   </style>
 </head>
 <body>
-  <header class="header">QAIDER</header>
+  <header class="header">GUIDER</header>
   <div class="container" role="main">
     <h1>Discover Your Verse</h1>
     <label for="mood">Select Your Mood:</label>
