--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Qaider Mood to Verse</title>
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Amiri&family=Jomhuria&family=Roboto:wght@400;700&family=Great+Vibes&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Scheherazade&family=Amiri&family=Jomhuria&family=Great+Vibes&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <!-- Animate.css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <!-- Font Awesome -->
@@ -19,96 +19,66 @@
     }
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
-      font-family: 'Roboto', sans-serif;
+      font-family: 'Scheherazade', serif;
       font-size: var(--font-base);
       color: var(--cream);
       overflow: hidden;
-      /* Fade-in background */
       background: url('https://zaahara.com/cdn/shop/articles/533598.jpg?v=1493280433') center/cover no-repeat fixed;
       animation: bgFade 2s ease-in-out forwards;
     }
-    @keyframes bgFade {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
+    @keyframes bgFade { from { opacity: 0; } to { opacity: 1; } }
     /* Splash Screen */
     .splash {
       position: fixed; top: 0; left: 0; width: 100%; height: 100%;
       display: flex; align-items: center; justify-content: center;
       background: var(--dark-green);
       z-index: 100;
-      flex-direction: column;
     }
     .splash h1 {
-      font-family: 'Great Vibes', cursive;
+      font-family: 'Scheherazade', serif;
       font-size: 4rem;
       color: var(--cream);
-      text-shadow: 0 2px 8px rgba(0,0,0,0.5);
-      animation: fadeInOut 4s ease-in-out forwards;
-    }
-    @keyframes fadeInOut {
-      0% { opacity: 0; transform: scale(0.8); }
-      20% { opacity: 1; transform: scale(1); }
-      80% { opacity: 1; transform: scale(1); }
-      100% { opacity: 0; transform: scale(1.2); }
+      white-space: nowrap;
+      opacity: 0;
     }
     /* Main Content */
     .main-content { display: none; position: relative; min-height: 100vh; }
     header.header {
       width: 100%; padding: 1rem; text-align: center;
-      font-size: 2.5rem; font-family: 'Great Vibes', cursive;
-      background: rgba(0,0,0,0.4);
-      backdrop-filter: blur(8px);
+      font-size: 2.5rem; font-family: 'Scheherazade', serif;
+      background: rgba(0,0,0,0.4); backdrop-filter: blur(8px);
       color: var(--cream);
     }
     .container {
-      width: 90%; max-width: 500px;
-      margin: 2rem auto;
-      background: rgba(255,255,255,0.05);
-      backdrop-filter: blur(8px);
-      border: 1px solid rgba(255,255,255,0.2);
-      border-radius: 1rem;
-      padding: 2rem;
-      text-align: center;
+      width: 90%; max-width: 500px; margin: 2rem auto;
+      background: rgba(255,255,255,0.05); backdrop-filter: blur(8px);
+      border: 1px solid rgba(255,255,255,0.2); border-radius: 1rem;
+      padding: 2rem; text-align: center;
       box-shadow: 0 8px 32px rgba(0,0,0,0.3);
     }
-    .container h1 {
-      margin-bottom: 1.5rem;
-      font-size: 1.75rem;
-    }
+    .container h1 { margin-bottom: 1.5rem; font-size: 1.75rem; }
     label { display: block; margin-bottom: 0.5rem; font-weight: 700; }
     select {
-      width: 100%; padding: 0.75rem;
-      border: 2px solid var(--cream);
-      border-radius: 2rem;
-      background: rgba(255,255,255,0.2);
-      font-size: 1rem;
-      font-family: 'Great Vibes', cursive;
-      color: var(--dark-green);
-      margin-bottom: 1rem;
-      appearance: none;
+      width: 100%; padding: 0.75rem; border: 2px solid var(--cream);
+      border-radius: 2rem; background: rgba(255,255,255,0.2);
+      font-size: 1rem; font-family: 'Great Vibes', cursive;
+      color: var(--dark-green); margin-bottom: 1rem; appearance: none;
       background-image: url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTIiIGhlaWdodD0iOCIgdmlld0JveD0iMCAwIDEyIDgiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+ICAgIDxwb2x5bGluZSBwb2ludHM9IjAsMCA2LDggMTIsMCIgc3Ryb2tlPSIjMDAzMDAzIiBzdHJva2Utd2lkdGg9IjIiIGZpbGw9Im5vbmUiLz48L3N2Zz4=");
-      background-repeat: no-repeat;
-      background-position: right 1rem center;
+      background-repeat: no-repeat; background-position: right 1rem center;
     }
     button#getVerse, button#nextBtn {
-      background-color: var(--cream);
-      color: var(--dark-green);
+      background-color: var(--cream); color: var(--dark-green);
       border: none; border-radius: 0.5rem;
-      padding: 0.75rem 2rem;
-      font-size: 1rem;
-      cursor: pointer;
-      transition: transform 0.2s;
-      margin: 1rem auto 0;
-      display: block;
+      padding: 0.75rem 2rem; font-size: 1rem;
+      cursor: pointer; transition: transform 0.2s;
+      margin: 1rem auto 0; display: block;
+      font-family: 'Scheherazade', serif;
     }
     button#getVerse:hover, button#nextBtn:hover { transform: scale(1.05); }
     .verses { display: none; flex-direction: column; gap: 1.5rem; }
     .verse-block {
-      background: rgba(0,0,0,0.3);
-      border-radius: 0.75rem;
-      padding: 1rem;
-      position: relative;
+      background: rgba(0,0,0,0.3); border-radius: 0.75rem;
+      padding: 1rem; position: relative;
     }
     .verse-block::before {
       content: attr(data-lang-label);
@@ -120,12 +90,12 @@
     .verse-text { font-size: 1rem; line-height: 1.5; margin-top: 0.5rem; }
     .play-btn {
       position: absolute; top: 0.5rem; right: 1rem;
-      background: none; border: none; cursor: pointer; font-size: 1.25rem;
-      color: var(--cream);
+      background: none; border: none; cursor: pointer;
+      font-size: 1.25rem; color: var(--cream);
     }
     /* Floating Icons */
-    .icon { position: absolute; color: var(--cream); opacity: 0.7; font-size: 1.5rem;
-      animation: floatAnim 6s ease-in-out infinite;
+    .icon { position: absolute; color: var(--cream); opacity: 0.7;
+      font-size: 1.5rem; animation: floatAnim 6s ease-in-out infinite;
     }
     @keyframes floatAnim {
       0% { transform: translateY(0) translateX(0); }
@@ -133,13 +103,18 @@
       100% { transform: translateY(0) translateX(0); }
     }
     /* Next Page */
-    .page2 { display: none; position: relative; min-height: 100vh; text-align: center; padding-top: 5rem; }
+    .page2 {
+      display: none; position: relative; min-height: 100vh;
+      text-align: center; padding-top: 5rem;
+      background: var(--dark-green);
+      font-family: 'Scheherazade', serif;
+    }
   </style>
 </head>
 <body>
   <!-- Splash Page -->
   <div class="splash">
-    <h1>بِسْمِ اللهِ الرَّحْمٰنِ الرَّحِيْمِ</h1>
+    <h1 id="splashText"></h1>
   </div>
   <!-- Main UI -->
   <div class="main-content">
@@ -173,7 +148,21 @@
     <p style="margin-top:2rem; font-size:1.25rem;">Here’s your next section—add content as needed!</p>
   </div>
   <script>
-    // Function to handle transition to page2
+    // Type Bismillah word by word
+    const splashWords = [
+      'بِسْمِ', 'اللهِ', 'الرَّحْمٰنِ', 'الرَّحِيْمِ'
+    ];
+    const splashEl = document.getElementById('splashText');
+    let splashIndex = 0;
+    function typeSplash() {
+      if (splashIndex < splashWords.length) {
+        splashEl.textContent += (splashIndex > 0 ? ' ' : '') + splashWords[splashIndex];
+        splashEl.style.opacity = 1;
+        splashIndex++;
+        setTimeout(typeSplash, 500);
+      }
+    }
+    // Transition to page2
     function transitionToPage2() {
       const main = document.querySelector('.main-content');
       const page2 = document.getElementById('page2');
@@ -184,25 +173,24 @@
         page2.classList.add('animate__animated', 'animate__fadeInRight');
       }, 800);
     }
-
-    // Splash -> Main and auto-next
+    // On load: type splash then auto-navigate
     window.addEventListener('load', () => {
+      typeSplash();
+      // After typing plus pause, go next
       setTimeout(() => {
         document.querySelector('.splash').style.display = 'none';
         document.querySelector('.main-content').style.display = 'block';
-        // Automatically proceed to next page after a brief pause
         setTimeout(transitionToPage2, 1000);
-      }, 3000);
+      }, splashWords.length * 500 + 1000);
     });
-
     // Verse & Speech
     const mappings = {
       sad: [{ar:'إِنَّ مَعَ الْعُسْرِ يُسْرًا',ur:'بے شک ہر تنگی کے ساتھ آسانی ہے',en:'Indeed, with hardship [will be] ease.'}],
       depressed: [{ar:'فَإِنَّ مَعَ الْعُسْرِ يُسْرًا',ur:'تو بے شک تنگی کے ساتھ آسانی ہے',en:'So verily, with the hardship, there is relief.'}],
-      anxious: [{ar:'الَّذِينَ آمَنُوا وَتَطْمَئِنُّ قُلُوبُهُم بِذِكْرِ اللَّهِ',ur:'وہ لوگ جو ایمان لائے اور جن کے دل اللہ کے ذکر سے اطمینان پذیر ہوتے ہیں',en:'Those who have believed and whose hearts are assured by the remembrance of Allah.'}],
-      angry: [{ar:'وَلَا يَحْسَبَنَّ الَّذِينَ يُسَارِعُونَ فِي الْكُفْرِ',ur:'اور جو لوگ کفر میں جلدی کرتے ہیں وہ نہ سمجھیں',en:'And do not let the hatred of a people prevent you from being just.'}],
-      stressed: [{ar:'وَهُوَ الَّذِي خَلَقَ السَّمَاوَاتِ وَالْأَرْضَ',ur:'وہی خدا ہے جس نے آسمانوں اور زمین کو پیدا کیا',en:'It is He who created the heavens and the earth.'}],
-      hopeful: [{ar:'وَمَن يَتَّقِ اللَّهَ يَجْعَل لَّهُ مَخْرَجًا',ur:'اور جو اللہ سے ڈرے گا اللہ اس کے لیے نکالنے کا راستہ نکال دے گا',en:'And whosoever fears Allah... He will make for him a way out.'}],
+      anxious: [{ar:'الَّذِينَ آمَنُوا وَتَطْمَئِنُّ قُلُوبُهُم بِذِكْرِ اللَّهِ',ur:'وہ لوگ جو ایمان لائے اور جن کے دل اللہ के ذکر से اطمینान پذیر होते हैं',en:'Those who have believed and whose hearts are assured by the remembrance of Allah.'}],
+      angry: [{ar:'وَلَا يَحْسَبَنَّ الَّذِينَ يُسَارِعُونَ فِي الْكُفْرِ',ur:'और जो لوگ کفر میں جلدी کرتے ہیں وہ न समझें',en:'And do not let the hatred of a people prevent you from being just.'}],
+      stressed: [{ar:'وَهُوَ الَّذِي خَلَقَ السَّمَاوَاتِ وَالْأَرْضَ',ur:'وہی خدا ہے جس نے آسمانوں اور زمین को پیدا کیا',en:'It is He who created the heavens and the earth.'}],
+      hopeful: [{ar:'وَمَن يَتَّقِ اللَّهَ يَجْعَل لَّهُ مَخْرَجًا',ur:'और जो اللہ से डرے گا اللہ اس کے لیے نکالنے का रास्ता निकाल देगा',en:'And whosoever fears Allah... He will make for him a way out.'}],
     };
     const getVerseBtn = document.getElementById('getVerse');
     const container = document.getElementById('versesContainer');
@@ -239,8 +227,7 @@
       container.style.display = 'flex';
       container.className = 'verses animate__animated animate__fadeIn';
     });
-    
-    // Next Button click event now uses transition function
+    // Next Button
     document.getElementById('nextBtn').addEventListener('click', transitionToPage2);
   </script>
 </body>
